# FastMesh

./: CMakeLists.txt  README.md  Unet.py  computeK.cpp  compute_K.py  config.py  demo_deform.py  gen_k.sh  novel_gif.py  psnr.py  space_carve.py  utils.py
lego_test/scan65/CAM/: 00000000_cam.txt  00000001_cam.txt  00000002_cam.txt  00000003_cam.txt  00000004_cam.txt  00000005_cam.txt  00000006_cam.txt  00000007_cam.txt  00000008_cam.txt  00000009_cam.txt  00000010_cam.txt  00000011_cam.txt  00000012_cam.txt  00000013_cam.txt  00000014_cam.txt  00000015_cam.txt  00000016_cam.txt  00000017_cam.txt  00000018_cam.txt  00000019_cam.txt  00000020_cam.txt  00000021_cam.txt  00000022_cam.txt  00000023_cam.txt  00000024_cam.txt  00000025_cam.txt  00000026_cam.txt  00000027_cam.txt  00000028_cam.txt  00000029_cam.txt  00000030_cam.txt  00000031_cam.txt  00000032_cam.txt  00000033_cam.txt  00000034_cam.txt  00000035_cam.txt  00000036_cam.txt  00000037_cam.txt  00000038_cam.txt  00000039_cam.txt  (+9 more)
lego_test/scan65/DEPTH/: 00000000.pfm  00000001.pfm  00000002.pfm  00000003.pfm  00000004.pfm  00000005.pfm  00000006.pfm  00000007.pfm  00000008.pfm  00000009.pfm  00000010.pfm  00000011.pfm  00000012.pfm  00000013.pfm  00000014.pfm  00000015.pfm  00000016.pfm  00000017.pfm  00000018.pfm  00000019.pfm  00000020.pfm  00000021.pfm  00000022.pfm  00000023.pfm  00000024.pfm  00000025.pfm  00000026.pfm  00000027.pfm  00000028.pfm  00000029.pfm  00000030.pfm  00000031.pfm  00000032.pfm  00000033.pfm  00000034.pfm  00000035.pfm  00000036.pfm  00000037.pfm  00000038.pfm  00000039.pfm  (+9 more)
